--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,8 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Elixir CI
 
 on:
@@ -22,18 +17,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up Elixir
       uses: erlef/setup-beam@v1
       with:
-        elixir-version: '1.14.1' # Define the elixir version [required]
-        otp-version: '25.0.4' # Define the OTP version [required]
+        elixir-version: '1.14.1'
+        otp-version: '25.0.4'
+    
     - name: Restore dependencies cache
       uses: actions/cache@v3
       with:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
         restore-keys: ${{ runner.os }}-mix-
+    
     - name: Install dependencies
       run: mix deps.get
+
     - name: Run tests
       run: mix test
